--- a/TextTrade/app/src/main/res/values/strings.xml
+++ b/TextTrade/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="search_hint">Enter Name or ISBN</string>
     <string name="app_name">TextTrade</string>
     <string name="action_settings">Settings</string>
-
+    <string name="disposing">Selling</string>
+    <string name="purchasing">Buying</string>
+    <string name="no">Notifications</string>
     <!-- Sign-in status messages -->
     <string name="signed_in_fmt">Signed in as: %s</string>
     <string name="signed_in">Signed in</string>
